[package]
name = "various_micro_services"
version = "0.1.0"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.51"
serde_skip = "0.1.0"

# iron dependencies
iron = "0.6.1"
time = "0.2.11"
sled = "0.31.0"
serde_cbor = "0.11.1"
rand = "0.7.3"
json-patch = "0.2.6"
bodyparser = "0.8.0"
log = "0.4.8"
router = "0.6.0"

# warp dependencies
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
